--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
                         <div class="col-lg-6">
                             <div class="intro-left">
-                                <h2 class="h-ultra">We care Group </h2>
+                                <h2 class="h-ultra">We  are caring Group </h2>
                                 <h4 class="h-light"> provide best services to people   </h4>
                                 <div class="intro-div-transparent">
 
