--- a/footer1.html
+++ b/footer1.html
@@ -15,7 +15,7 @@
                                 <div class="text-center team-footer-detail-1 team-footer-bg-color1" id="team-part5-detail-1">
                                     <h6> INFORMATION</h6>
                                     <ul>
-                                        <li> Press Room </li>
+                                        <li> pPress Room </li>
                                         
                                         <li>   In the Community  </li>
                                         <li>Request Ticket Donation </li>
