--- a/footer1.html
+++ b/footer1.html
@@ -2,11 +2,10 @@
         <div class="team-footer-banner">
             <div class="team-footer-bg-color">
                 <div class="container footer-container">
-                    <div class="team-footer-detail ">
+                    <div class="team-footer-detail1 ">
                         <div class="row">
-                            <div class="col-lg-12 text-center mt-3">
-                                <h4>This Is used as footer of site</h4>
-
+                            <div class="col-lg-12 text-center mt-5" style="border:0px solid red; color:red" >
+<h1 style="color:#fff;">we are here to serve you</h1>
                             </div>
                         </div>
                         <div class="row">
@@ -15,7 +14,7 @@
                                 <div class="text-center team-footer-detail-1 team-footer-bg-color1" id="team-part5-detail-1">
                                     <h6> INFORMATION</h6>
                                     <ul>
-                                        <li> pPress Room </li>
+                                        <li> Press Room </li>
                                         
                                         <li>   In the Community  </li>
                                         <li>Request Ticket Donation </li>
