js added for small screen

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link href="indexcss.css" rel="stylesheet" />
     <link href="teamcss.css" rel="stylesheet" />
     <link href="navigation-barcss.css" rel="stylesheet" />
-    <!-- <link href="navigation-barcss.1.css" rel="stylesheet" /> -->
+    <link href="navigation-barcss.1.css" rel="stylesheet" />
 
 </head>
 <body>
