caegory htm added

--- a/category1.html
+++ b/category1.html
@@ -1,4 +1,4 @@
-﻿    <div style="height:100px;">
+﻿    <div style="height:72px;">
 
     </div>
 
@@ -55,7 +55,7 @@
                                 <div class="team-part1-detail-1 team-part1-bg-color1" id="team-part5-detail-1">
 
 
-                                    <div class="img-thumbnail text-center">
+                                    <div class="img-thumbnail1 text-center">
                                         <div>
                                             <img src="IMAGES/1.jpg" class="img-thumbnail">
 
@@ -79,7 +79,7 @@
                                     </div>-->
 
 
-                                    <div class="img-thumbnail text-center">
+                                    <div class="img-thumbnail1 text-center">
                                         <img src="IMAGES/2.jpg" alt="..." class="img-thumbnail">
                                         <div class="caption">
                                             <h5>Iaivid Donas</h5>
@@ -99,7 +99,7 @@
 
                                     </div>-->
 
-                                    <div class="img-thumbnail text-center">
+                                    <div class="img-thumbnail1 text-center">
                                         <img src="IMAGES/4.jpg" alt="..." class="img-thumbnail">
                                         <div class="caption">
                                             <h5>Iaivid Donas</h5>
@@ -117,7 +117,7 @@
                             <div class="col-md-3 col-sm-6 col-12">
                                 <div class="team-part1-detail-1 team-part1-bg-color1" id="team-part5-detail-1">
 
-                                    <div class="img-thumbnail text-center">
+                                    <div class="img-thumbnail1 text-center">
                                         <img src="IMAGES/3.jpg" alt="..." class="img-thumbnail">
                                         <div class="caption">
                                             <h5>Iaivid Donas</h5>
