--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
                         <i class="up-arrow1 fa fa-angle-up fa-2x pull-right align-middle" aria-hidden="true"></i>
                     </a>
                     <ul id="submenu1" class="submenu">                                                                                                                                                                                  
-                        <li><a  class="link1" href="#about"> about us <i class="fa fa-chevron-right pull-right" aria-hidden="true"></i></a></li>
-                        <li><a class="link2" href="#team"> team<i class="fa fa-chevron-right pull-right" aria-hidden="true"></i> </a></li>
-                        <li><a class="link3" href="#approach">approach<i class="fa fa-chevron-right pull-right" aria-hidden="true"></i></a></li>
+                        <li><a  class="link1 slide-link" href="#about"> about us <i class="fa fa-chevron-right pull-right" aria-hidden="true"></i></a></li>
+                        <li><a class="link2 slide-link" href="#team"> team<i class="fa fa-chevron-right pull-right" aria-hidden="true"></i> </a></li>
+                        <li><a class="link3 slide-link" href="#approach">approach<i class="fa fa-chevron-right pull-right" aria-hidden="true"></i></a></li>
                     </ul>
 
                 </li>
@@ -162,9 +162,9 @@
                         <i class="up-arrow1 fa fa-angle-up fa-2x pull-right align-middle" aria-hidden="true"></i>
                     </a>
                     <ul id="submenu2" class="submenu">
-                        <li><a href="#Companies" class="link4">our companies<i class="fa fa-chevron-right pull-right" aria-hidden="true"></i></a></li>
-                        <li><a href="#FAQ" class="link5">FAQ<i class="fa fa-chevron-right pull-right" aria-hidden="true"></i></a></li>
-                        <li><a href="#Registration" class="link6">Registration <i class="fa fa-chevron-right pull-right" aria-hidden="true"></i></a></li>
+                        <li><a href="#Companies" class="link4 slide-link">our companies<i class="fa fa-chevron-right pull-right" aria-hidden="true"></i></a></li>
+                        <li><a href="#FAQ" class="link5 slide-link">FAQ<i class="fa fa-chevron-right pull-right" aria-hidden="true"></i></a></li>
+                        <li><a href="#Registration" class="link6 slide-link">Registration <i class="fa fa-chevron-right pull-right" aria-hidden="true"></i></a></li>
                     </ul>
                 </li>
                 <li>
@@ -174,7 +174,7 @@
                         <i class="up-arrow1 fa fa-angle-up fa-2x pull-right align-middle" aria-hidden="true"></i>
                     </a>
                     <ul id="submenu3" class="submenu">
-                        <li><a href="#category" class="link7">category<i class="fa fa-chevron-right pull-right" aria-hidden="true"></i></a></li>
+                        <li><a href="#category" class="link7 slide-link">category<i class="fa fa-chevron-right pull-right" aria-hidden="true"></i></a></li>
                <!--  -->
                         <!--<li><a href="#JSONdata" class="link8">JSON DATA<i class="fa fa-chevron-right pull-right" aria-hidden="true"></i></a></li>
                         <li><a href="#JSONAPI" class="link9">JSON API<i class="fa fa-chevron-right pull-right" aria-hidden="true"></i></a></li>-->
@@ -188,8 +188,8 @@
 
 
                 <!--//<a  href="http://twitter.com"><i class="fa fa-twitter"></i></a>-->
-                <!--<a  href="http://facebook.com"><i class="fa fa-facebook"></i></a>-->
-                <!--<a href="http://youtube.com"><i class="fa fa-youtube"></i></a>-->
+                <a  href="http://facebook.com"><i class="fa fa-facebook"></i></a>
+                <a href="http://youtube.com"><i class="fa fa-youtube"></i></a>
             </div>
 
         </div>
