--- a/team1.html
+++ b/team1.html
@@ -1,5 +1,4 @@
-﻿    <div style="height:200px; border-bottom:1px solid red;color: red;">
-hello
+﻿    <div style="height:74px;">
     </div>
 
 
@@ -24,7 +23,7 @@ hello
                                 <div class="tilte-banner-part1-right">
                                     <h1 class="h1 bg-danger">Lorem Ipsum <small>industry</small></h1>
                                     <p class="lead"> <strong> industry</strong>. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. .</p>
-                                    <button class="btn btn-danger"> see more</button>
+                                    <button class="btn buttondiv1 part-all-button part5-button btn-hover"> see more</button>
                                 </div>
                             </div>
 
@@ -45,7 +44,7 @@ hello
                                 <div class="tilte-banner-part1-right">
                                     <h1 class="h1 bg-danger">1Lorem Ipsum <small>industry</small></h1>
                                     <p class="lead"> <strong> industry</strong>. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. .</p>
-                                    <button class="btn btn-danger"> see more</button>
+                                    <button class="btn buttondiv1 part-all-button part5-button btn-hover"> see more</button>
                                 </div>
                             </div>
                         </div>
@@ -65,7 +64,7 @@ hello
                                 <div class="tilte-banner-part1-right">
                                     <h1 class="h1 bg-danger">Lorem Ipsum <small>industry</small></h1>
                                     <p class="lead"> <strong> industry</strong>. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. .</p>
-                                    <button class="btn btn-danger"> see more</button>
+                                    <button class="btn buttondiv1 part-all-button part5-button btn-hover"> see more</button>
                                 </div>
 
                             </div>
@@ -135,7 +134,7 @@ hello
 
                             <i class="fa fa-arrow-circle-o-right"></i><small class="text-muted">  see more</small>
                             <!--</a>-->
-                        </p>
+                            </p>
 
                     </div>
                 </div>
