--- a/FAQ1.html
+++ b/FAQ1.html
@@ -142,16 +142,16 @@
                                         </div>
                                     </div>
                                     <div class="outer-div">
-                                        <h4>
+                                        <h4  id="t9"> 
                                             <span>
                                                 <i class="down-arrow fa fa-arrow-circle-o-down"></i>
                                                 <i class="up-arrow fa fa-arrow-circle-o-up"></i>
                                             </span>
-                                            what is Probably not the best ns layout, but the name does fit
+                                            bushra what is Probably not the best ns layout, but the name does fit
                                         </h4>
                                         <div class="team-part10-answer">
                                             <p>
-                                                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                                                Lorem Ipsum has been the indus busgrstry's standard dummy text ever since the 1500s,
                                                 when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
                                             </p>
                                         </div>
