--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <div class="mainnavbar-sm bg-light smallnavbar">
         <div class="pull-left">
             <a class="logo-sm" href="index.html">
-                <img src="images/logo50x50.png" />
+                <img src="IMAGES/logo50x50.png" />
             </a>
         </div>
         <div class="pull-right">
