--- a/footer1.html
+++ b/footer1.html
@@ -12,7 +12,7 @@
                             <div class="col-md-4 col-sm-6 footer-div">
 
                                 <div class="text-center team-footer-detail-1 team-footer-bg-color1" id="team-part5-detail-1">
-                                    <h6> INFORMATION</h6>
+                                    <h4> INFORMATION</h4>
                                     <ul>
                                         <li> Press Room </li>
                                         
@@ -26,7 +26,7 @@
 
                                 <div class="text-center team-footer-detail-2 team-footer-bg-color1" id="team-part5-detail-1">
 
-                                    <h6>ABOUT US</h6>
+                                    <h4>ABOUT US</h4>
                                     <ul >
                                         <li>   In the Community  </li>
                                         <li>Leadership </li>
@@ -38,16 +38,16 @@
                                 </div>
                             </div>
 
-                            <div class="col-md-4   col-sm-9  text-center footer-div">
+                            <div class="col-md-4   col-sm-12  text-center footer-div">
 
                                 <div class="text-center team-footer-detail-3 team-footer-bg-color1" id="team-part5-detail-1">
+                                        <h4 class="text-center"> CONTACT US</h4>
 
-                                    <h6 class="text-center"> CONTACT US</h6>
 
-                                    <img src="IMAGES/cagatay-orhan-21446.jpg" />
+                                    <!-- <img src="IMAGES/cagatay-orhan-21446.jpg" /> -->
 
                                     <div class="text-div">
-                                        <table>
+                                        <table class="table-condensed footer-table">
                                             <thead>
                                                 <tr>
                                                     <th>day</th>
