--- a/index.html
+++ b/index.html
@@ -320,8 +320,8 @@
             <section id="service" class="marginbot-60">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-12 col-sm-12">
-                            <h2 class="ser-title">Our Service</h2>
+                        <div class="col-md-12 col-sm-12 text-center">
+                            <h1 class="ser-title  text-center">Our Service</h1>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris cillum.</p>
                         </div>
                     </div>
@@ -329,33 +329,33 @@
 
                         <div class="col-md-4 col-sm-6">
                             <div class="service-info">
-                                <div class="icon">
+                                <div class="icon text-center">
                                     <i class="fa fa-stethoscope"></i>
                                 </div>
                                 <div class="icon-info">
-                                    <h4>24 Hour Support</h4>
+                                    <h3  class= "text-center">24 Hour Support</h3>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-4 col-sm-6">
                             <div class="service-info">
-                                <div class="icon">
+                                <div class="icon text-center">
                                     <i class="fa fa-ambulance"></i>
                                 </div>
                                 <div class="icon-info">
-                                    <h4>Emergency Services</h4>
+                                    <h3  class= "text-center">Emergency Services</h3>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-4 col-sm-6">
                             <div class="service-info">
-                                <div class="icon">
+                                <div class="icon text-center">
                                     <i class="fa fa-user-md"></i>
                                 </div>
                                 <div class="icon-info">
-                                    <h4>Medical Counseling</h4>
+                                    <h3  class= "text-center">Medical Counseling</h3>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                                 </div>
                             </div>
@@ -363,22 +363,22 @@
 
                         <div class="col-md-4 col-sm-6">
                             <div class="service-info">
-                                <div class="icon">
+                                <div class="icon text-center">
                                     <i class="fa fa-medkit"></i>
                                 </div>
                                 <div class="icon-info">
-                                    <h4>Premium Healthcare</h4>
+                                    <h3  class= "text-center">Premium Healthcare</h3>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-4 col-sm-6">
                             <div class="service-info">
-                                <div class="icon">
+                                <div class="icon text-center">
                                     <i class="fa fa-medkit"></i>
                                 </div>
                                 <div class="icon-info">
-                                    <h4>Premium Healthcare</h4>
+                                    <h3  class= "text-center">Premium Healthcare</h3>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                                 </div>
                             </div>
@@ -386,11 +386,11 @@
 
                         <div class="col-md-4 col-sm-6">
                             <div class="service-info">
-                                <div class="icon">
+                                <div class="icon text-center">
                                     <i class="fa fa-user-md"></i>
                                 </div>
                                 <div class="icon-info">
-                                    <h4>Medical Counseling</h4>
+                                    <h3 class= "text-center">Medical Counseling</h3>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                                 </div>
                             </div>
@@ -403,14 +403,14 @@
                     <div class="bg-color section-padding">
                         <div class="container">
                             <div class="row">
-                                <div class="col-lg-12 text-center" style="border:0px solid red;padding:60px;">
+                                <div class="col-lg-12 text-center mt-4">
                                     <h1 class="header-h text-center">Up Coming events</h1>
-                                    <p class="header-p">Decorations 100% complete here</p>
+                                    <h3>Decorations 100% complete here</h3>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-6 col-sm-6 left-images">
-                                    <img src="IMAGES/8.jpg" class="img-responsive">
+                                    <img src="IMAGES/8.jpg" class="img-fluid">
                                 </div>
                                 <div class="col-md-6 col-sm-6 details-text">
                                     <div class="content-holder">
@@ -423,8 +423,13 @@
                                             <strong>Time: </strong>
                                             07:30pm
                                         </address>
+                                    </div>
+
+                                    <div class="div-button">
+
                                         <a class="btn btn-imfo btn-read-more" href="events-details.html">Read more</a>
                                     </div>
+                                    
                                 </div>
 
 
