--- a/social-media1.html
+++ b/social-media1.html
@@ -1,5 +1,5 @@
 ﻿    <!--  side bar social media start -->
-    <section class="team-sidebar-social-media margin-top-section mb-5 ">
+    <section class="team-sidebar-social-media mb-5 ">
         <div class="sidebar-social">
 
             <div class="sidebar-social-wrapper">
