X is added for menu

--- a/index.html
+++ b/index.html
@@ -107,19 +107,21 @@
 
     <!-- -------------navbar for samll screen-------------------- -->
     <div class="mainnavbar-sm bg-light smallnavbar">
-        <div class="pull-left">
+        <div class="pull-right">
             <a class="logo-sm" href="index.html">
                 <img src="IMAGES/logo50x50.png" />
             </a>
         </div>
-        <div class="pull-right">
-            <a class="search-web " id="search-web" href="#">
-                <!--<img src="IMAGES/icon-search.png" />-->
-                <i class="fa fa-search"></i>
+        <div class="pull-left">
+            <a class="toggle-button" href="#">
+                <i class="fa fa-bars"  id="toggle-show" aria-hidden="true"></i>
+                <span id="toggle-close"class="toggle-close">X</span>
+                
             </a>
-            <a class="toggle-button pull-right" href="#">
-                <i class="fa fa-bars" aria-hidden="true"></i>
-            </a>
+                    <a class="search-web " id="search-web" href="#">
+                        <!--<img src="IMAGES/icon-search.png" />-->
+                        <i class="fa fa-search"></i>
+                    </a>
         </div>
     </div>
     <!-- -------------search bar for all screen-------------------- -->
