--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
 
 
                 <!--//<a  href="http://twitter.com"><i class="fa fa-twitter"></i></a>-->
-                <a  href="http://facebook.com"><i class="fa fa-facebook"></i></a>
-                <a href="http://youtube.com"><i class="fa fa-youtube"></i></a>
+                <a class="facebook-class" href="http://facebook.com"><i class="fa fa-facebook"></i></a>
+                <a class="twitter-class" href="http://twitter.com"><i class="fa fa-twitter"></i></a>
             </div>
 
         </div>
