--- a/about1.html
+++ b/about1.html
@@ -9,8 +9,8 @@
 
 
 
-    <div class="aboutintro" id="top-about1">
-        <section class="approach-part2 ">
+    <div class="aboutintro"  id="top-about1">
+        <section class="approach-part2 mb-4 ">
             <div class="approach-part2-banner">
                 <div class="bg-color1">
                     <div class="container">
@@ -45,7 +45,7 @@
                                         <figure class="figure">
                                             <img class="img-fluid  figure-img rounded-circle" src="IMAGES/images (5).jpg" />
 
-                                            <figcaption class="figure-caption">A caption for the above image.</figcaption>
+                                            <figcaption class="figure-caption">the above image.</figcaption>
                                         </figure>
                                         <div class="approach-part2-detail-1-text">
                                             <h1></h1>
@@ -63,7 +63,7 @@
                                         <figure class="figure">
                                             <img class="img-fluid  figure-img rounded-circle" src="IMAGES/images (8).jpg" />
 
-                                            <figcaption class="figure-caption">A caption for the above image.</figcaption>
+                                            <figcaption class="figure-caption">A caption image.</figcaption>
                                         </figure>
                                         <div class="approach-part2-detail-1-text">
                                             <h1></h1>
@@ -81,7 +81,7 @@
                                         <figure class="figure text-center">
                                             <img class="img-fluid  figure-img rounded-circle text-center" src="IMAGES/images (3).jpg" />
 
-                                            <figcaption class="figure-caption">3A caption for the above image.</figcaption>
+                                            <figcaption class="figure-caption">above image.</figcaption>
                                         </figure>
                                         <div class="approach-part2-detail-1-text">
                                             <h1></h1>
