--- a/index.html
+++ b/index.html
@@ -319,11 +319,11 @@
 
                 </div>
             </section>
-            <section id="service" class="marginbot-60">
+            <section id="service" class="mt-5 marginbot-60">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12 col-sm-12 text-center">
-                            <h1 class="ser-title  text-center">Our Service</h1>
+                            <h1 class="text-center">Our Service</h1>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris cillum.</p>
                         </div>
                     </div>
@@ -411,13 +411,13 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-md-6 col-sm-6 left-images">
-                                    <img src="IMAGES/8.jpg" class="img-fluid">
+                                <div class="col-md-4 col-sm-4 left-images">
+                                    <img src="IMAGES/8.jpg" class="img-responsive">
                                 </div>
-                                <div class="col-md-6 col-sm-6 details-text">
+                                <div class="col-md-8 col-sm-8 details-text">
                                     <div class="content-holder">
                                         <h2>Joyful party</h2>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore eos suscipit earum voluptas aliquam recusandae, quae iure adipisci, inventore quia, quos delectus quaerat praesentium id expedita nihil illo accusantium, tempora.</p>
+                                        <p>Lor msms sdae, quae iure adipisci, inventore quia, quos delectus quaerat praesentium id expedita nihil illo accusantium, tempora.</p>
                                         <address>
                                             <strong>Place: </strong>
                                             1612 Collins Str, Victoria 8007
@@ -449,8 +449,9 @@
                                 <p> Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col-lg-3 col-md-3 team-content wow fadeInLeft" data-wow-delay="2s">
+                        <div class="row no-gutters">
+                            <div class="col-6 col-lg-3 col-md-3">
+                            <div class="team-content wow fadeInLeft" data-wow-delay="2s">
                                 <img src="IMAGES/1.jpg" alt="img1" class="rounded-circle">
                                 <h4>   Bushra</h4>
                                 <b> MD</b>
@@ -460,7 +461,9 @@
                                 <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                                 <a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
                             </div>
-                            <div class="col-lg-3 col-md-3 team-content wow fadeInLeft" data-wow-delay="1.6s">
+                            </div>
+                            <div class="col-6 col-lg-3 col-md-3">
+                                    <div class="team-content wow fadeInLeft" data-wow-delay="2s">
                                 <img src="IMAGES/2.jpg" alt="img1" class="rounded-circle">
                                 <h4> Qadeer</h4>
                                 <b> Director</b>
@@ -470,7 +473,10 @@
                                 <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                                 <a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
                             </div>
-                            <div class="col-lg-3 col-md-3 team-content wow fadeInLeft" data-wow-delay="1.2s">
+                        </div>
+                           
+                            <div class="col-6 col-lg-3 col-md-3">
+                                    <div class="team-content wow fadeInLeft" data-wow-delay="2s">
                                 <img src="IMAGES/7.jpg" alt="img1" class="rounded-circle">
                                 <h4>  Zaffar</h4>
                                 <b> Chief executive</b>
@@ -480,7 +486,10 @@
                                 <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                                 <a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
                             </div>
-                            <div class="col-lg-3 col-md-3  team-content  fadeInLeft" data-wow-delay="0.8s">
+                        </div>
+                            <div class="col-6 col-lg-3 col-md-3">
+                                    <div class="team-content wow fadeInLeft" data-wow-delay="2s">
+                                   
                                 <img src="IMAGES/4.jpg" alt="img1" class="rounded-circle">
                                 <h4> Hassan</h4>
                                 <b> Doctor</b>
@@ -490,6 +499,7 @@
                                 <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                                 <a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
                             </div>
+                        </div>
                         </div>
                     </div>
                 </div>
