--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                         </div>
 
                         <div class="col-lg-6">
-                            <div class="intro-left-img text-center ">
+                            <div class="intro-left-img">
 
                                 <img src="IMAGES/intro-tran.png" class="img-resonsive" />
                             </div>
