--- a/index.html
+++ b/index.html
@@ -246,12 +246,13 @@
                     </div>
                 </div>
             </div>
+            
             <section id="pricing" class="home-section bg-gray paddingbot-60">
-                <div class="container marginbot-50">
+                <div class="container mt-5">
                     <div class="row">
-                        <div class="col-lg-8 col-lg-offset-2">
+                        <div class="col-lg-12 mb-5">
                             <div class="section-heading text-center">
-                                <h2 class="h-bold">Health packages</h2>
+                                <h2 class="text-center"">Health packages</h2>
                                 <p>Take charge of your health today with our specially designed health packages</p>
                             </div>
                             <div class="divider-short"></div>
@@ -445,7 +446,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-lg-12 team-header">
-                                <h2 class="bg-danger"> Our Team </h2>
+                                <h2 class="bg-info pt-3 pb-3"> Our Team </h2>
                                 <p> Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
                             </div>
                         </div>
