--- a/index.html
+++ b/index.html
@@ -207,45 +207,92 @@
     <div style="height:40px;">
 
     </div>
-        <div id="intro" class="intro paddingtop-60">
-            <div class="intro-content">
-                <div class="container">
-                    <div class="row">
 
-                        <div class="col-lg-6">
-                            <div class="intro-left">
-                                <h2 class="h-ultra">We  are care Group </h2>
-                                <h4 class="h-light"> provide best services to people   </h4>
-                                <div class="intro-div-transparent">
 
-                                    <ul class="lead-list">
-                                        <li>
-                                            <span class="fa fa-check fa-2x icon-success">
-
-                                            </span>
-                                            <span class="list">
-                                                <strong>Affordable monthly premium packages</strong>
-                                                <br />
-                                                Lorem ipsum dolor sit amet, in verterem persecuti vix, sit te meis
-                                            </span>
-                                        </li>
-                                        <li><span class="fa fa-check fa-2x icon-success"></span> <span class="list"><strong>Choose your favourite doctor</strong><br />Lorem ipsum dolor sit amet, in verterem persecuti vix, sit te meis</span></li>
-                                        <li><span class="fa fa-check fa-2x icon-success"></span> <span class="list"><strong>Only use friendly environment</strong><br />Lorem ipsum dolor sit amet, in verterem persecuti vix, sit te meis</span></li>
-                                    </ul>
-                                    <a href="#" class="btn btn-skin btn-lg">Learn more <i class="fa fa-angle-right"></i></a>
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <div class="title-banner-part1 ">
+                    <div class="title-banner1 title-banner-all simple-header add-slash">
+                        <!--<div class="container ">-->
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <!--<img src="IMAGEs/2.jpg" />-->
+                            </div>
+                            <div class="col-lg-6 z-9">
+                                <div class="tilte-banner-part1-right">
+                                    <h1 class="h1 bg-danger">Lorem Ipsum <small>industry</small></h1>
+                                    <p class="lead"> <strong> industry</strong>. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. .</p>
+                                    <button class="btn buttondiv1 part-all-button part5-button btn-hover"> see more</button>
                                 </div>
                             </div>
+
                         </div>
-
-                        <div class="col-lg-6">
-                            <div class="intro-left-img">
-
-                                <img src="IMAGES/intro-tran.png" class="img-resonsive" />
+                    </div>
+                </div>
+                <!--<img class="d-block w-100" src="..." alt="First slide">-->
+            </div>
+            <div class="carousel-item">
+                <div class="title-banner-part1">
+                    <div class="title-banner2 title-banner-all simple-header add-slash">
+                        <!--<div class="container ">-->
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <!--<img src="IMAGEs/2.jpg" />-->
+                            </div>
+                            <div class="col-lg-6 z-9">
+                                <div class="tilte-banner-part1-right">
+                                    <h1 class="h1 bg-danger">1Lorem Ipsum <small>industry</small></h1>
+                                    <p class="lead"> <strong> industry</strong>. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. .</p>
+                                    <button class="btn buttondiv1 part-all-button part5-button btn-hover"> see more</button>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
+                <!--<img class="d-block w-100" src="..." alt="Second slide">-->
             </div>
+            <div class="carousel-item">
+                <div class="title-banner-part1">
+                    <div class="title-banner3 title-banner-all simple-header add-slash">
+                        <!--<div class="container ">-->
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <!--<img src="IMAGEs/2.jpg" />-->
+                            </div>
+                            <div class="col-lg-6 z-9">
+                                <div class="tilte-banner-part1-right">
+                                    <h1 class="h1 bg-danger">Lorem Ipsum <small>industry</small></h1>
+                                    <p class="lead"> <strong> industry</strong>. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. .</p>
+                                    <button class="btn buttondiv1 part-all-button part5-button btn-hover"> see more</button>
+                                </div>
+
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <!--<img class="d-block w-100" src="..." alt="Third slide">-->
+            </div>
+        </div>
+        <a class="carousel-control-prev  " href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-arrow fa fa-arrow-circle-o-left fa-3x" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-arrow fa fa-arrow-circle-o-right fa-3x" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+
+    <!-- ggggg -->
+        <div id="intro" class="intro paddingtop-60">
+           
             
             <section id="pricing" class="home-section bg-gray paddingbot-60">
                 <div class="container mt-5">
