--- a/category1.html
+++ b/category1.html
@@ -16,7 +16,7 @@
                             <div class="col-lg-8 ">
                                 <div class="team-part5-detail-2 team-part5-bg-color1" id="team-part5-detail-1">
                                     <h1>simply dummy text </h1>
-                                    <h2>Lorem imply dummy <span class="h3">Lorem Ipsum</span></h2>
+                                    <h2>Lorem imply dummy budra <span class="h3">Lorem Ipsum</span></h2>
 
                                     <p>
                                         Lorem Ipsum is simply dummy text of the printing and typesetting in
