--- a/category1.html
+++ b/category1.html
@@ -85,9 +85,9 @@
                                             <h5>Iaivid Donas</h5>
                                             <p>Doctor</p>
                                             <ul class="team-part1-social">
-                                                <li class="list-item facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                                <li class="list-item google-plus"><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                                                <li class="list-item twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                                <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                                <li class="google-plus"><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                                                <li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
                                             </ul>
                                         </div>
                                     </div>
