--- a/approach1.html
+++ b/approach1.html
@@ -134,10 +134,6 @@
                                     <p>
                                         <strong> hhhhThe goal of our Children’s</strong>
                                         absolute div5
-                                        Lorem Ipsum is simply dummy text of the printing and typesettry. Lorem
-                                        Lorem Ipsum is simply dummy text of the printing and typesettry. Lorem
-                                        Lorem Ipsum is simplg and typesetting industry. Lorem
-
                                         Feeding Initiative he goal of our
                                         Feeding Initiative he goal of our Feeding Initiative he goal of our
                                     </p>
@@ -259,7 +255,7 @@
                                     <p>
                                         <span class="span-big">T</span>he goal of our Children’s Feeding Initiative is to see lives changed as we promote healthy children and communities that are free from poverty and hunger. Many of the children enrolled in our initiative have their only meal of the day at school — a meal provided by Convoy of Hope and our numerous partners.
 
-                                        We believe that the children we feed are essential members of their communities who can, one day, become leaders who bring positive change to their countries by breaking the cycle of poverty and hunger.  To accomplish our goal, we use the daily meal as a starting point to build strong, loving communities that have clean water, healthy living environments, education and livelihood opportunities.
+                                        change to their countries by breaking the cycle of poverty and hunger.  To accomplish our goal, we use the daily meal as a starting point to build strong, loving communities that have clean water, healthy living environments, education and livelihood opportunities.
                                     </p>
                                 </div>
                             </div>
@@ -284,6 +280,6 @@
 
 
 <script src="Scripts/jquery-3.2.1.js"></script>
-<script src="jqueryALL.js"></script>
+<script src="js/jqueryALL.js"></script>
 <!--<script src="indexjquery.js"></script>-->
-<script src="custom-team-js.js"></script>
+<script src="js/custom-team-js.js"></script>
