--- a/companies1.html
+++ b/companies1.html
@@ -174,8 +174,8 @@
         </div>
 
 <script src="Scripts/jquery-3.2.1.js"></script>
-<script src="custom-team-js.js"></script>
-<script src="jqueryALL.js"></script>
+<script src="js/custom-team-js.js"></script>
+<script src="js/jqueryALL.js"></script>
 <!--<script type="text/javascript">
         $(document).ready(function () {
             //$.get("footer.html", function (data) {
