--- a/index-home.html
+++ b/index-home.html
@@ -19,10 +19,10 @@
     <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>-->
     <!--<script src="indexjquery.js"></script>-->
     <link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
-    <link href="indexcss.css" rel="stylesheet" />
-    <link href="index-style.css" rel="stylesheet" />
-    <link href="teamcss.css" rel="stylesheet" />
-    <link href="navigation-barcss.css" rel="stylesheet" />
+    <link href="css/indexcss.css" rel="stylesheet" />
+    <link href="css/index-style.css" rel="stylesheet" />
+    <link href="css/teamcss.css" rel="stylesheet" />
+    <link href="css/navigation-barcss.css" rel="stylesheet" />
 
 </head>
 <body>
