--- a/team.html
+++ b/team.html
@@ -15,11 +15,11 @@
     <link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
     <link href="Content/font-awesome.min.css" rel="stylesheet" />
     <link href="Content/octicons.css" rel="stylesheet" />
-    <!--<link href="indexcss.css" rel="stylesheet" />-->
+    <link href="indexcss.css" rel="stylesheet" />
     <!--<link href="index-style.css" rel="stylesheet" />-->
-    <link href="navigation-barcss.css" rel="stylesheet" />
+    <link href="css/navigation-barcss.css" rel="stylesheet" />
 
-    <link href="teamcss.css" rel="stylesheet" />
+    <link href="css/teamcss.css" rel="stylesheet" />
 </head>
 <body data-spy="scroll" data-target="#mainnavbar" data-offset="10">
 
