--- a/social-media.html
+++ b/social-media.html
@@ -13,8 +13,8 @@
     <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>-->
     <!--<script src="indexjquery.js"></script>-->
     <link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
-    <!--<link href="indexcss11.css" rel="stylesheet" />-->
-    <link href="navigation-barcss.css" rel="stylesheet" />
+    <link href="css/indexcss11.css" rel="stylesheet" />
+    <link href="css/navigation-barcss.css" rel="stylesheet" />
 </head>
 <body>
 
